--- a/index.html
+++ b/index.html
@@ -1,177 +1,109 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head><title>Photo Gallery</title>
+<head>
+    <title>Home</title>
+    <style>
+    body {
+        background-color: #ffe4c4;
+    }
+
+    nav {
+        text-align: right;
+        font-family: Arial, sans-serif;
+        background-color: black;
+        border: 1px solid teal;
+        border-radius: 10px;
+        padding: 10px;
+        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+        margin: 10px auto;
+        width: fit-content;
+    }
+
+    nav a:link {
+        transition: 0.5s;
+        text-decoration: none;
+        color: white;
+        padding: 20px;
+        margin: 5px;
+        display: inline-block;
+        border-radius: 5px;
+    }
+
+    nav a:hover {
+        text-decoration: underline;
+        background: cyan;
+        color: black;
+    }
+
+    nav a:active {
+        color: white;
+    }
+
+    nav a:visited {
+        color: white;
+    }
+
+    .banner {
+        background-image: url("images/banner.jpg");         background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        text-align: center;
+        padding: 50px 20px;
+        box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+    }
+
+    #main {
+        width: 70%;
+        margin: auto;
+	margin-top: 20px;
+        font-size: 20px;
+        border: 1px solid black;
+        text-align: justify;
+        padding: 30px;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    img {
+        display: block;
+        margin: auto;
+    }
+
+    hr {
+        color: black;
+        size: 10;
+        width: 100%;
+    }
+
+.pic
+{
+width:20%;
+
+}
+    </style>
 </head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<style>
-@keyframes fadeout
-{
-from{opacity:0;}
-to{opacity:1;}
-}
-
-header
-{
-background:teal;
-width:30%;
-margin:auto;
-color:white;
-text-align:center;
-font-size:20px;
-padding:20px;
-margin-top:-10px;
-margin-bottom:30px;
-font-family:arial black;
-box-shadow:5px 5px 20px cyan;
-transition:0.50s;
-border-radius:20px;
-
-}
-
-header:hover
-{
-box-shadow:10px 10px 50px magenta;
-cursor:pointer;
-}
-
-
-body
-{
-background:black;
-text-align:center;
-animation:fadeout 1s;
-
-}
-
-.pic
-{
-width:20%;
-border-radius:20px;
-margin:60px;
-box-shadow:5px 5px 10px cyan;
-transition:0.50s;
-}
-
-.pic:hover
-{transform:scale(1.5);
-cursor:pointer;
-}
-}
-
-
-/* Extra small devices (phones,600px and down) */
-@media only screen and (max-width: 600px)
-{
-body{background:pink;}
-header
-{
-width:100%;
-font-size:15px;
-padding:5px;
-}
-.pic
-{
-width:80%;
-margin:10px;
-margin-bottom:40px;
-}
-
-}
-
-
-
-/*Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px)
-{
-body{background:green;}
-header
-{
-//display:none;
-width:100%;
-font-size:15px;
-padding:5px;
-}
-.pic
-{
-width:40%;
-margin:10px;
-margin-bottom:40px;
-}
-}
-
-
-
-/*Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px)
-{
-header
-{
-display:block;
-width:100%;
-font-size:30px;
-
-}
-body{background:blue;}
-.pic
-{
-width:20%;
-margin:10px;
-margin-bottom:40px;
-}
-}
-
-
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px)
-{
-header{width:100%;
-font-size:50px;
-}
-body{background:orange;}
-
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px)
-{
-header
-{
-
-width:100%;
-font-size:50px;
-
-}
-body{background:yellow;}
-}
-s
-
-</style>
-
 <body>
-<header>
-Web Photo Gallery
-</header>
-<a href="index1.html">
-<img src="image/photo1.jpg" class="pic">
-</a>
-<a href="index2.html">
-<img src="image/photo2.jpg" class="pic">
-</a>
-<a href="index3.html">
-<img src="image/photo3.jpg" class="pic">
-</a>
-<a href="index4.html">
-<img src="image/photo4.jpg" class="pic">
-</a>
-<a href="index5.html">
-<img src="image/photo5.jpg" class="pic">
-</a>
-<a href="index6.html">
-<img src="image/photo6.jpg" class="pic">
-</a>
+  <nav>
+         <a href="#">Home<a>
+         <a href="practice.html">Practice</a>
+         <a href=""_blank">Figma</a>
+         <a href="" target="_blank">Behance</a>
+         <a href="#">About<a>
+   </nav>
 
+    
+  
+    <div class="banner">
+        <img src="image/profile photo.jpg" class="pic">
+    </div>
 
-</body>
+  
+    <div id="main">
+        <p>My name is sunoy hazra I'm a passionate UI/UX Designer who loves transforming ideas into visually appealing and user-friendly designs. My journey in the design world is fueled by curiosity and a constant desire to learn and grow. I'm always ready to dive into new projects and explore innovative ways to solve problems.
+
+        When I'm not designing, you can find me exploring the latest design trends, experimenting with new design tools, or enjoying a good laugh over some quirky humor. Let's create something amazing together!</p>
+    </div>
+   </body>
 </html>
