--- a/photogallery.html
+++ b/photogallery.html
@@ -3,10 +3,7 @@
 <head><title>Photo Gallery</title>
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<h2 style="background: #E85D04; Width: 10%; Margin: Auto;  margin-bottom: 20px; text-align: Center; Font-size:30px; Color: White; Font-family: Arial; Padding:10px; border-radius: 30px;"> 
-<a href="index.html"> Home </a> </h2>
-<h2 style="background: #E85D04; Width: 10%; Margin: Auto;  margin-bottom: 20px; text-align: Center; Font-size:30px; Color: White; Font-family: Arial; Padding:10px; border-radius: 30px;"> 
-<a href="practice.html">Back</a> </h2>
+
 <style>
 @keyframes fadeout
 {
@@ -151,6 +148,9 @@ body{background:yellow;}
 s
 
 </style>
+</h2 style="background: #E85004; Width: 10%; Margin: Auto; margin-bottom: 20px; text-align: center; Font-size:30px; Color: White; Font-family: Arial; Padding:10px; border-radius: 30px;">
+
+< <a href="index.html"> Back </a> </h2>
 
 <body>
 <header>
