--- a/practice.html
+++ b/practice.html
@@ -37,25 +37,25 @@ h1
         td a {
             text-decoration: none;
             color: #007BFF; /* Link color */
-            transition: color 0.3s ease, transform 0.3s ease; /* Smooth transitions */
+            transition: color 0.3s ease, transform 0.3s ease; 
         }
         td a:hover {
-            color: #0056b3; /* Change color on hover */
-            transform: scale(3); /* Slight zoom effect */
+            color: #0056b3; 
+            animation: scale(3); /* Slight zoom effect */
         }
     </style>
 </head>
 <body>
+</h2 style="background: #E85004; Width: 10%; Margin: Auto; margin-bottom: 20px; text-align: center; Font-size:30px; Color: teal; Font-family: Arial; Padding:10px; border-radius: 30px;">
+
+<a href="index.html"> Back </a> </h2>
     <h1>My Practice Work</h1>
     <table>
         <tr>
             <th>Menu</th>
         </tr>
         <tr>
-            <td><a href="index.html">Image Gallery</a></td>
-        </tr>
-        <tr>
-            <td><a href="#">List in HTML</a></td>
+            <td><a href="photogallery.html">Photo Gallery</a></td>
         </tr>
         <tr>
             <td><a href="#">Table</a></td>
@@ -67,7 +67,7 @@ h1
             <td><a href="#">Creating Banner in HTML</a></td>
         </tr>
         <tr>
-            <td><a href="practice.html">Home</a></td>
+            <td><a href="index.html">Home</a></td>
         </tr>
     </table>
 </body>
