--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     }
 
     .banner {
-        background-image: url("images/banner.jpg");         background-size: cover;
+        background-image: url("image/banner.jpg");  
+	    background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         text-align: center;
