--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     }
 
     .banner {
-        background-image: url("image/banner.jpg");  
-	    background-size: cover;
+        background-image: url("images/banner.jpg");         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         text-align: center;
@@ -74,7 +73,7 @@
 
     hr {
         color: black;
-        size: 10;
+        size: 60;
         width: 100%;
     }
 
@@ -89,8 +88,8 @@ width:20%;
   <nav>
          <a href="#">Home<a>
          <a href="practice.html">Practice</a>
-         <a href=""_blank">Figma</a>
-         <a href="" target="_blank">Behance</a>
+         <a href="https://www.figma.com/design/d6KAQFNDYZh6dosRc2VVH9/Untitled?node-id=0-1&p=f&t=CxCk2sBxo53Lli0s-0"_blank">Figma</a>
+         <a href="https://www.behance.net/?tracking_source=nav20" target="_blank">Behance</a>
          <a href="#">About<a>
    </nav>
 
@@ -102,9 +101,16 @@ width:20%;
 
   
     <div id="main">
-        <p>My name is sunoy hazra I'm a passionate UI/UX Designer who loves transforming ideas into visually appealing and user-friendly designs. My journey in the design world is fueled by curiosity and a constant desire to learn and grow. I'm always ready to dive into new projects and explore innovative ways to solve problems.
-
+        <p>My name is sunoy hazra I'm a passionate UI/UX Designer who loves transforming ideas into visually appealing and user-friendly designs. 
+</p>
+<p1>
+My journey in the design world is fueled by curiosity and a constant desire to learn and grow.
+</p1>
+<p>
+I'm always ready to dive into new projects and explore innovative ways to solve problems.
+</p>
         When I'm not designing, you can find me exploring the latest design trends, experimenting with new design tools, or enjoying a good laugh over some quirky humor. Let's create something amazing together!</p>
     </div>
+<hr color="black"size="5"/>
    </body>
 </html>
