--- a/practice.html
+++ b/practice.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html>
+<!--
+<meta http-equiv="refresh"content="1">
+--!>
 <head>
     <title>Practice</title>
     <style>
 h1
-  {font color:teal
+  {font color:Black
   }
         /* Table Styling */
         table {
             border-collapse: collapse;
             width: 50%;
-            text-align: left;
+            text-align: center;
             margin:auto; 0; /* Align to the left */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow to the table */
         }
         th, td {
-            border: 1px solid #ddd;
+            border: 6px solid #ddd;
             padding: 10px;
         }
         th {
-            background-color: #4CAF50; /* Header background color */
-            color: teal;
+            background-color: white; /* Header background color */
+            color: Black;
         }
         tr:nth-child(even) {
-            background-color: ##d35400  /* Light gray for even rows */
+            background-color: black /* Light gray for even rows */
         }
         tr:nth-child(odd) {
-            background-color: #e9a697; /* White for odd rows */
+            background-color: white; /* White for odd rows */
         }
         tr:hover {
-            background-color: #teal; /* Highlight row on hover */
+            background-color: #black; /* Highlight row on hover */
             transition: background-color 0.3s ease; /* Smooth transition */
         }
 
@@ -49,7 +52,7 @@ h1
 </h2 style="background: #E85004; Width: 10%; Margin: Auto; margin-bottom: 20px; text-align: center; Font-size:30px; Color: teal; Font-family: Arial; Padding:10px; border-radius: 30px;">
 
 <a href="index.html"> Back </a> </h2>
-    <h1>My Practice Work</h1>
+    <h1>My Work</h1>
     <table>
         <tr>
             <th>Menu</th>
@@ -57,16 +60,17 @@ h1
         <tr>
             <td><a href="photogallery.html">Photo Gallery</a></td>
         </tr>
+          <tr>
+            <td><a href="file:///D:/html%20work%20new%20mine/list.html">List In HTML</a></td>
+        </tr>
+
         <tr>
-            <td><a href="#">Table</a></td>
+            <td><a href="file:///D:/html%20work%20new%20mine/table.html">Table In HTML</a></td>
         </tr>
         <tr>
             <td><a href="#">Login Form</a></td>
         </tr>
-        <tr>
-            <td><a href="#">Creating Banner in HTML</a></td>
-        </tr>
-        <tr>
+                <tr>
             <td><a href="index.html">Home</a></td>
         </tr>
     </table>
