--- a/photogallery.html
+++ b/photogallery.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+<!--
+<meta http-equiv="refresh"content="1">
+--!>
 <head><title>Photo Gallery</title>
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +16,7 @@ to{opacity:1;}
 
 header
 {
-background:teal;
+background:Gray;
 width:30%;
 margin:auto;
 color:white;
@@ -31,75 +34,72 @@ border-radius:20px;
 
 header:hover
 {
-box-shadow:10px 10px 50px magenta;
+box-shadow:10px 10px 50px black;
 cursor:pointer;
 }
 
 
 body
 {
-background:black;
+background:red;
 text-align:center;
-animation:fadeout 1s;
-
+animation:rotation;
 }
 
 .pic
 {
-width:20%;
+width:35%;
 border-radius:20px;
-margin:60px;
+margin:40px;
 box-shadow:5px 5px 10px cyan;
-transition:0.50s;
+transition:0.5s;
 }
 
 .pic:hover
 {transform:scale(1.5);
 cursor:pointer;
 }
-}
 
 
 /* Extra small devices (phones,600px and down) */
 @media only screen and (max-width: 600px)
 {
-body{background:pink;}
+body{background:white;}
 header
 {
-width:100%;
-font-size:15px;
-padding:5px;
+width:50%;
+font-size:30px;
+padding:2px;
 }
 .pic
 {
-width:80%;
-margin:10px;
-margin-bottom:40px;
+width:65%;
+margin:3px;
+margin-bottom:10px;
+margin-top:50px;
 }
-
 }
-
 
 
 /*Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px)
 {
-body{background:green;}
+body{background:Gray;}
 header
 {
 //display:none;
-width:100%;
+width:30%;
 font-size:15px;
-padding:5px;
+padding:20px;
 }
 .pic
 {
 width:40%;
-margin:10px;
-margin-bottom:40px;
+margin:4px;
+margin-bottom:20px;
+margin-top:50px;
 }
 }
-
 
 
 /*Medium devices (landscape tablets, 768px and up) */
@@ -112,15 +112,14 @@ width:100%;
 font-size:30px;
 
 }
-body{background:blue;}
+body{background:skyblue;}
 .pic
 {
-width:20%;
-margin:10px;
-margin-bottom:40px;
+width:25%;
+margin:6px;
+margin-bottom:30px;
+margin-top:30px;
 }
-}
-
 
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -130,7 +129,6 @@ header{width:100%;
 font-size:50px;
 }
 body{background:orange;}
-
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -143,14 +141,21 @@ width:100%;
 font-size:50px;
 
 }
-body{background:yellow;}
+body{background:white;}
 }
-s
+.pic
+{
+width:25%;
+margin:6px;
+margin-bottom:60px;
+margin-top:60px;
+}
+
 
 </style>
 </h2 style="background: #E85004; Width: 10%; Margin: Auto; margin-bottom: 20px; text-align: center; Font-size:30px; Color: White; Font-family: Arial; Padding:10px; border-radius: 30px;">
 
-< <a href="index.html"> Back </a> </h2>
+<a href="practice.html"> Back </a> </h2>
 
 <body>
 <header>
