--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     }
 
     .banner {
-        background-image: url("banner.jpg");         background-size: cover;
+        background-image: url("banner.jpg");         
+	background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         text-align: center;
@@ -96,7 +97,7 @@ width:20%;
     
   
     <div class="banner">
-        <img src="profile photo.jpg" class="pic">
+        <img src="profile.jpg" class="pic">
     </div>
 
   
