--- a/practice.html
+++ b/practice.html
@@ -61,14 +61,14 @@ h1
             <td><a href="photogallery.html">Photo Gallery</a></td>
         </tr>
           <tr>
-            <td><a href="list.html">List In HTML</a></td>
+            <td><a href="file:///D:/html%20work%20new%20mine/list.html">List In HTML</a></td>
         </tr>
 
         <tr>
-            <td><a href="table.html">Table In HTML</a></td>
+            <td><a href="file:///D:/html%20work%20new%20mine/table.html">Table In HTML</a></td>
         </tr>
         <tr>
-            <td><a href="#">Login Form</a></td>
+            <td><a href="file:///D:/html%20work%20new%20mine/news.html">News</a></td>
         </tr>
                 <tr>
             <td><a href="index.html">Home</a></td>
