--- a/news.html
+++ b/news.html
@@ -95,15 +95,14 @@ Width:5000px;
 margin-left:100px;
 animation:movetext 22s linear infinite;
 }
-<a href="practice.html"> Back </a>
 
 </style>
-
+<h6><a href="practice.html"> Back </a> </h6>
 <body bgcolor="Black">
+
 
 <div id="logo" style="text-align:center;">
 NEWS
-<a href="practice.html"> Back </a> </h6>
 
 </div>
 
