--- a/index1.html
+++ b/index1.html
@@ -28,7 +28,7 @@ animation:one1 1s ease-in;
 </style>
 <body>
 <header>
-<a href="index.html">
+<a href="photogallery.html">
 <img src="image/cross.png">
 </a>
 <img src="image/photo1.jpg" class="pic">
