--- a/index3.html
+++ b/index3.html
@@ -26,7 +26,7 @@ animation:one1 1s ease out;
 <body>
 <header>
 
-<a href="index.html">
+<a href="photogallery.html">
 <img src="image/cross.png">
 </a>
 </header>
