--- a/index2.html
+++ b/index2.html
@@ -6,8 +6,8 @@
 <style>
 @keyframes one1
 {
-from{transform:scale(3);}
-to{transform:scale(1);}
+from{transform:scale(3)rotate(0deg);}
+to{transform:scale(1)rotate(360deg);}
 }
 body
 {
@@ -16,10 +16,10 @@ background:white;
 }
 .pic
 {
-width:50%;
-height:550px;
+width:80%;
+height:350px;
 box-shadow:10px 10px 10px black;
-animation:one1 1s ease out;
+animation:one1 1s ease-in;
 }
 
 </style>
