--- a/news.html
+++ b/news.html
@@ -76,12 +76,11 @@ margin:30px;
 border:1px white solid;
 animation:mycolor 40s infinite reverse; 
 }
-
 #strip
 {
 color:white;
 font-size:50px;
-background:gray;
+background:red;
 box-shadow: 10px 10 px 10px cyan;
 text-transform:uppercase;
 padding:20px;
@@ -97,12 +96,13 @@ animation:movetext 22s linear infinite;
 }
 
 </style>
+<a href="practice.html"> Back </a> 
 
 <body bgcolor="Black">
-<h6><a href="practice.html"> Back </a> </h6>
 
 <div id="logo" style="text-align:center;">
 NEWS
+
 
 </div>
 
