--- a/practice.html
+++ b/practice.html
@@ -52,7 +52,7 @@ h1
 </h2 style="background: #E85004; Width: 10%; Margin: Auto; margin-bottom: 20px; text-align: center; Font-size:30px; Color: teal; Font-family: Arial; Padding:10px; border-radius: 30px;">
 
 <a href="index.html"> Back </a> </h2>
-    <h1>My Work</h1>
+    <h2>My Work</h2>
     <table>
         <tr>
             <th>Menu</th>
@@ -61,14 +61,14 @@ h1
             <td><a href="photogallery.html">Photo Gallery</a></td>
         </tr>
           <tr>
-            <td><a href="list.html">List In HTML</a></td>
+            <td><a href="file:///D:/html%20work%20new%20mine/list.html">List In HTML</a></td>
         </tr>
 
         <tr>
-            <td><a href="table.html">Table In HTML</a></td>
+            <td><a href="file:///D:/html%20work%20new%20mine/table.html">Table In HTML</a></td>
         </tr>
         <tr>
-            <td><a href="news.html">News</a></td>
+            <td><a href="file:///D:/html%20work%20new%20mine/news.html">News</a></td>
         </tr>
                 <tr>
             <td><a href="index.html">Home</a></td>
