--- a/index1.html
+++ b/index1.html
@@ -6,34 +6,34 @@
 <style>
 @keyframes one1
 {
-  from{transform:scale(1.5);}
-  to{transform:scale(1);}
-
-
+from{transform:scale(3)rotate(0deg);}
+to{transform:scale(1)rotate(360deg);}
 }
-
-header
 body
 {
 text-align:center;
 background:white;
+//margin-top:60px;
+//margin-bottom:40px;
 }
 .pic
 {
-width:50%;
+width:80%;
+height:350px;
 box-shadow:10px 10px 10px black;
 animation:one1 1s ease-in;
 }
 
 </style>
+<a href="list.html"> Back </a>
 <body>
 <header>
+
 <a href="photogallery.html">
 <img src="image/cross.png">
 </a>
-<img src="image/photo1.jpg" class="pic">
 </header>
-
+<img src="image/photo1.jpg" class="pic">
 
 
 </body>
