--- a/photogallery.html
+++ b/photogallery.html
@@ -16,14 +16,14 @@ to{opacity:1;}
 
 header
 {
-background:Gray;
+background:yellow;
 width:30%;
 margin:auto;
 color:white;
 text-align:center;
 font-size:20px;
 padding:20px;
-margin-top:30px;
+margin-top:-0.5px;
 margin-bottom:30px;
 font-family:arial black;
 box-shadow:5px 5px 20px cyan;
@@ -42,7 +42,7 @@ cursor:pointer;
 body
 {
 background:red;
-text-align:center;
+text-align:;
 animation:rotation;
 }
 
@@ -56,7 +56,7 @@ transition:0.5s;
 }
 
 .pic:hover
-{transform:scale(2);
+{transform:scale(1.5);
 cursor:pointer;
 }
 
