--- a/index.html
+++ b/index.html
@@ -6,10 +6,36 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <header>
-header
 </header>
 
 <style>
+@keyframes changepic
+{
+10%{background-image:url(image/g1.gif);}
+20%{background-image:url(image/g1.gif);}
+30%{background-image:url(image/g2.gif);}
+40%{background-image:url(image/g2.gif);}
+50%{background-image:url(image/g3.gif);}
+60%{background-image:url(image/g3.gif);}
+70%{background-image:url(image/g4.gif);}
+80%{background-image:url(imag/g4.gif);}
+90%{background-image:url(image/g5.gif);}
+100%{background-image:url(image/g5.gif);}
+}
+header
+{
+width:90%;
+height:900px;
+text-align:center;
+margin:auto;
+box-shadow:10px 10px 10px gray;
+background-image:url(images/p9.gif);
+background-repeat:no-repeat;
+background-size:cover;
+//background-size:100% ,500px;
+transition:2s;
+animation:changepic 15s infinite;
+}
 header
 {
 height:200px;
@@ -195,7 +221,7 @@ color: black;
 </nav>
 
 <div class="banner">
-<img src="profile.jpg" class="pic">
+<img src="image/profilepicpng2.png" class="pic">
 </div>
 
 <div id="main">
