--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <style>
 @keyframes changepic
 {
-10%{background-image:url(image/g1.gif);}
-20%{background-image:url(image/g1.gif);}
-30%{background-image:url(image/g2.gif);}
-40%{background-image:url(image/g2.gif);}
-50%{background-image:url(image/g3.gif);}
-60%{background-image:url(image/g3.gif);}
-70%{background-image:url(image/g4.gif);}
-80%{background-image:url(imag/g4.gif);}
-90%{background-image:url(image/g5.gif);}
-100%{background-image:url(image/g5.gif);}
+10%{background-image:url(g1.gif);}
+20%{background-image:url(g1.gif);}
+30%{background-image:url(g2.gif);}
+40%{background-image:url(g2.gif);}
+50%{background-image:url(g3.gif);}
+60%{background-image:url(g3.gif);}
+70%{background-image:url(g4.gif);}
+80%{background-image:url(g4.gif);}
+90%{background-image:url(g5.gif);}
+100%{background-image:url(g5.gif);}
 }
 header
 {
@@ -29,7 +29,7 @@ height:900px;
 text-align:center;
 margin:auto;
 box-shadow:10px 10px 10px gray;
-background-image:url(images/p9.gif);
+background-image:url(p9.gif);
 background-repeat:no-repeat;
 background-size:cover;
 //background-size:100% ,500px;
@@ -221,7 +221,7 @@ color: black;
 </nav>
 
 <div class="banner">
-<img src="image/profilepicpng2.png" class="pic">
+<img src="profilepicpng2.png" class="pic">
 </div>
 
 <div id="main">
