--- a/photogallery.html
+++ b/photogallery.html
@@ -42,7 +42,7 @@ cursor:pointer;
 body
 {
 background:red;
-text-align:;
+text-align:center;
 animation:rotation;
 }
 
@@ -50,16 +50,20 @@ animation:rotation;
 {
 width:35%;
 border-radius:20px;
-margin:40px;
 box-shadow:5px 5px 10px cyan;
 transition:0.5s;
+
 }
 
 .pic:hover
-{transform:scale(1.5);
+{transform:scale(1.04);
 cursor:pointer;
 }
 
+a 
+{
+padding:20px;
+}
 
 /* Extra small devices (phones,600px and down) */
 @media only screen and (max-width: 600px)
