--- a/news.html
+++ b/news.html
@@ -69,7 +69,7 @@ font-size:20px;
 font-family: "Bebas Neue", sans-serif;
 transition:2s;
 Width:50%;
-Height:200px;
+Height:auto;
 Padding:20px;
 border-radius:30px;
 margin:30px;
