--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ color: black;
 </nav>
 
 <div class="banner">
-<img src="image/profilepicpng2.png" class="pic">
+<img src="image/profileselfpng.png" class="pic">
 </div>
 
 <div id="main">
