--- a/news.html
+++ b/news.html
@@ -66,8 +66,9 @@ animation:blink 2s infinite alternate;
 {
 color:red;
 font-size:20px;
-font-family: "Bebas Neue", sans-serif;
+font-family: "arial black", sans-serif;
 transition:2s;
+text-transform:titlecase;
 Width:50%;
 Height:auto;
 Padding:20px;
@@ -82,10 +83,10 @@ color:white;
 font-size:50px;
 background:red;
 box-shadow: 10px 10 px 10px cyan;
-text-transform:uppercase;
+text-transform:lowercase;
 padding:20px;
 font-family: "Bebas Neue", sans-serif;
-Word-spacing:15px;
+Word-spacing:25px;
 Letter-spacing:7px;
 Width:5000px;
 }
