--- a/practice.html
+++ b/practice.html
@@ -18,18 +18,18 @@ h1
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow to the table */
         }
         th, td {
-            border: 6px solid #ddd;
+            border: 6px black;
             padding: 10px;
         }
         th {
-            background-color: white; /* Header background color */
+            background-color:gray; /* Header background color */
             color: Black;
         }
         tr:nth-child(even) {
-            background-color: black /* Light gray for even rows */
+            background-color: white; /* Light gray for even rows */
         }
         tr:nth-child(odd) {
-            background-color: white; /* White for odd rows */
+            background-color: black; /* White for odd rows */
         }
         tr:hover {
             background-color: #black; /* Highlight row on hover */
@@ -39,11 +39,12 @@ h1
         /* Link Styling */
         td a {
             text-decoration: none;
-            color: #007BFF; /* Link color */
+            color: ; /* Link color */
             transition: color 0.3s ease, transform 0.3s ease; 
         }
         td a:hover {
-            color: #0056b3; 
+            color: white ; 
+	    background-color:"";
             animation: scale(3); /* Slight zoom effect */
         }
     </style>
@@ -61,14 +62,14 @@ h1
             <td><a href="photogallery.html">Photo Gallery</a></td>
         </tr>
           <tr>
-            <td><a href="list.html">List In HTML</a></td>
+            <td><a href="file:///D:/html%20work%20new%20mine/list.html">List In HTML</a></td>
         </tr>
 
         <tr>
-            <td><a href="table.html">Table In HTML</a></td>
+            <td><a href="file:///D:/html%20work%20new%20mine/table.html">Table In HTML</a></td>
         </tr>
         <tr>
-            <td><a href="news.html">News</a></td>
+            <td><a href="file:///D:/html%20work%20new%20mine/news.html">News</a></td>
         </tr>
                 <tr>
             <td><a href="index.html">Home</a></td>
