--- a/index.html
+++ b/index.html
@@ -164,6 +164,21 @@ border-radius: 10px;
 box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
 }
 
+#box {
+width: 70%;
+margin: auto;
+margin-top: 20px;
+font-size: 20px;
+border: 1px solid black;
+text-align: justify;
+padding: 30px;
+background-color: white;
+border-radius: 10px;
+box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+display:flex;
+}
+
+
 img {
 display: block;
 margin: auto;
@@ -179,6 +194,33 @@ width: 100%;
 {
 width:20%;
 }
+.box
+{
+//background-color:yellow;
+width:20%;
+padding:10px;
+
+}
+
+footer
+{
+width:80%;
+margin:auto;
+display:flex;
+border: 1px solid black;
+box-shadow:10px 10px 10px black;
+margin-top:30px;
+
+//flex-direction:column;
+flex-wrap:wrap;
+justify-content: center;
+justify-content: space-around;
+align-items: center;
+align-items: stretch;
+align-content: space-around;
+}
+
+
 
 /* Medium and larger screens */
 @media only screen and (min-width: 768px)
@@ -274,9 +316,61 @@ When I'm not designing, you can find me exploring the latest design trends, expe
 
 
 
-<div id="main" margin:50%;>
 
 <footer>
+<div class="box">
+<p style="color:teal;">
+RESOURCES 
+</p>
+<p style="color:black;">
+Overview
+</p>
+<p style="color:black;">
+Premium plans
+<p/>
+<p style="color:black;">
+Affiliate Plans
+</p>
+<p style="color:black;">
+Promotions
+</p>
+</div>
+
+<div class="box">
+<p style="color:teal;">
+RESOURCES 
+</p>
+<p style="color:black;">
+Overview
+</p>
+<p style="color:black;">
+Premium plans
+<p/>
+<p style="color:black;">
+Affiliate Plans
+</p>
+<p style="color:black;">
+Promotions
+</p>
+</div>
+<div class="box">
+<p style="color:teal;">
+RESOURCES 
+</p>
+<p style="color:black;">
+Overview
+</p>
+<p style="color:black;">
+Premium plans
+<p/>
+<p style="color:black;">
+Affiliate Plans
+</p>
+<p style="color:black;">
+Promotions
+</p>
+</div>
+<div class="box">
 <p style="color:teal;">
 RESOURCES 
 </p>
@@ -291,10 +385,13 @@ Affiliate Plans
 </p>
 <p style="color:black;">
 Promotions
-</p> 
-
+</p>
+</div>
 
 </footer>
+
+<div class="box">
+</div>
 
 
 
