--- a/practice.html
+++ b/practice.html
@@ -62,22 +62,22 @@ h1
             <td><a href="photogallery.html">Photo Gallery</a></td>
         </tr>
           <tr>
-            <td><a href="file:///D:/html%20work%20new%20mine/list.html">List In HTML</a></td>
+            <td><a href="list.html">List In HTML</a></td>
         </tr>
 
         <tr>
-            <td><a href="file:///D:/html%20work%20new%20mine/table.html">Table In HTML</a></td>
+            <td><a href="table.html">Table In HTML</a></td>
         </tr>
         <tr>
-            <td><a href="file:///D:/html%20work%20new%20mine/news.html">News</a></td>
+            <td><a href="news.html">News</a></td>
         </tr>
        
         <tr>
-           <td><a href="file:///D:/html%20work%20new%20mine/Bookmark.html">Bookmark</a></td>
+           <td><a href="Bookmark.html">Bookmark</a></td>
         </tr>
 
          <tr>
-            <td><a href="">Shopping Site</a></td>
+            <td><a href="ShoppingSite.html">Shopping Site</a></td>
          </tr>
         
           <tr>
