--- a/practice.html
+++ b/practice.html
@@ -81,7 +81,7 @@ h1
          </tr>
         
           <tr>
-            <td><a href="file:///D:/html%20work%20new%20mine/Loginform.html">Login Form</a></td>
+            <td><a href="Loginform.html">Login Form</a></td>
          </tr>
          
                  <tr>
