--- a/practice.html
+++ b/practice.html
@@ -83,6 +83,9 @@ h1
           <tr>
             <td><a href="Loginform.html">Login Form</a></td>
          </tr>
+ <tr>
+            <td><a href="registrationform.html">Registration Form</a></td>
+         </tr>
          
                  <tr>
             <td><a href="index.html">Home</a></td>
