--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@ color: black;
 
 <header>
 
-<img src="image/photo1.jpg" class="picture">
-<img src="image/photo2.jpg" class="picture">
-<img src="image/photo3.jpg" class="picture">
-<img src="image/photo4.jpg" class="picture">
-<img src="image/photo5.jpg" class="picture">
+<img src="image/b1.jpeg" class="picture">
+<img src="image/b2.jpeg" class="picture">
+<img src="image/b3.jpeg" class="picture">
+<img src="image/b4.jpeg" class="picture">
+<img src="image/b5.jpeg" class="picture">
 
 </header>
 
