--- a/index.html
+++ b/index.html
@@ -1,401 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
-<head>  <title>Menu</title> </head>
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<head>
+    <title>WhatsApp QR Code</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+</head>
 <style>
-
-@keyframes runbanner {
-10% { left: 0%; }
-20% { left: -19%; }
-30% { left: -19%; }
-40% { left: -38%; }
-50% { left: -38%; }
-60% { left: -57%; }  
-70% { left: -57%; }
-80% { left: -76%; }
-90% { left: -76%; }
-}
-
-#slide
-{
-width:650%;
-height:600px;
-margin-top:-5px;
-}
-
-body{
-overflow-x:hidden;
-}
-
-pic
-{
-width:19%;
-height:100%;
-box-shadow:10px 10px 10px gray;
-position:relative;
-animation: runbanner 15s infinite;  
-}
-
-header
-{
-width: 500%;
-height: 420px;
-margin-top: -5px;
-position: relative; 
-white-space: nowrap; 
-overflow: hidden;
-}
-
-body
-{
-overflow-x:hidden;
-}
-
-.picture
-{
-width: 19.5%;
-height: 100%;
-box-shadow: 10px 10px 10px gray;
-position: relative;
-animation: runbanner 15s infinite;
-padding: 10px;
-display: inline-block; 
-vertical-align: top;  
-}
-
-nav
-{
-text-align: center;
-font-family: Arial, sans-serif;
-background-color: black;
-border: 1px solid teal;
-border-radius: 10px;
-padding: 10px;
-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
-margin: 10px auto;
-width: fit-content;
-position: relative;
-}
-
-#menu
-{
-cursor: pointer;
-font-size: 30px;
-background: gray;
-padding: 10px 20px;
-border-radius: 5px;
-color: white;
-display: block;
-margin: auto;
-width: fit-content;
-}
-
-nav ol
-{
-list-style: none;
-padding: 0px;
-margin: 0;
-text-align: center;
-display: none;
-}
-
-nav:hover ol
-{
-display: block;
-}
-
-nav ol li
-{
-background: teal;
-padding: 15px;
-margin: 5px 0;
-width: 200px;
-border-radius: 5px;
-box-shadow: 5px 5px 10px rgba(0,0,0,0.2);
-}
-
-nav ol li a:link,
-nav ol li a:visited
-{
-color: white;
-font-size: 18px;
-text-decoration: none;
-display: block;
-}
-
-nav ol li:hover
-{
-background: black;
-}
-
-nav ol li:hover a
-{
-text-decoration: underline;
-}
-
-nav .links {
-display: none;
-}
-
-/* Banner and other styles remain unchanged */
-.banner {
-background-image: url("images/banner.jpg");         background-size: cover;
-background-position: center;
-background-repeat: no-repeat;
-text-align: center;
-padding: 50px 20px;
-box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
-border-radius: 10px;
-}
-
-#main {
-width: 70%;
-margin: auto;
-margin-top: 20px;
-font-size: 20px;
-border: 1px solid black;
-text-align: justify;
-padding: 30px;
-background-color: white;
-border-radius: 10px;
-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
-}
-
-#box {
-width: 70%;
-margin: auto;
-margin-top: 20px;
-font-size: 20px;
-border: 1px solid black;
-text-align: justify;
-padding: 30px;
-background-color: white;
-border-radius: 10px;
-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
-display:flex;
-}
-
-
-img {
-display: block;
-margin: auto;
-}
-
-hr {
-color: black;
-size: 60;
-width: 100%;
-}
-
-.pic
-{
-width:20%;
-}
-.box
-{
-//background-color:yellow;
-width:20%;
-padding:10px;
-
-}
-
-footer
-{
-width:80%;
-margin:auto;
-display:flex;
-border: 1px solid black;
-box-shadow:10px 10px 10px black;
-margin-top:30px;
-
-//flex-direction:column;
-flex-wrap:wrap;
-justify-content: center;
-justify-content: space-around;
-align-items: center;
-align-items: stretch;
-align-content: space-around;
-}
-
-
-
-/* Medium and larger screens */
-@media only screen and (min-width: 768px)
-{
-
-#menu {
-display: none;
-}
-
-nav {
-width: 80%;
-text-align: right;
-}
-
-nav:hover ol {
-display: none;
-}
-
-nav .links {
-display: block;
-}
-
-nav .links a:link,
-nav .links a:visited {
-transition: 0.5s;
-text-decoration: none;
-color: white;
-padding: 15px 20px;
-margin: 0 5px;
-display: inline-block;
-border-radius: 5px;
-font-size: 18px;
-}
-
-nav .links a:hover {
-text-decoration: underline;
-background: cyan;
-color: black;
-}
-
-}
-
+    #qrcode{
+        margin:auto;
+        display:block;
+        margin:auto;
+    }
 </style>
-
 <body>
+    <h2>Scan to Chat on WhatsApp</h2>
+    <div id="qrcode"></div>
 
-<header>
+    <script>
+        // Replace with your phone number in international format
+        var phoneNumber = "12345678900"; 
+        var whatsappLink = "https://wa.me/" + phoneNumber;
 
-<img src="image/b1.jpeg" class="picture">
-<img src="image/b2.jpeg" class="picture">
-<img src="image/b3.jpeg" class="picture">
-<img src="image/b4.jpeg" class="picture">
-<img src="image/b5.jpeg" class="picture">
-
-</header>
-
-<nav>
-<span id="menu">&#9776; Menu</span>
-<ol>
-<li><a href="#">Home</a></li>
-<li><a href="practice.html">Practices</a></li>
-<li><a href="https://www.behance.net/?tracking_source=nav20" target="_blank">Behance</a></li>
-<li><a href="https://www.figma.com/design/d6KAQFNDYZh6dosRc2VVH9/Untitled?node-id=0-1&p=f&t=CxCk2sBxo53Lli0s-0" target="_blank">Figma</a></li>
-<li><a href="#">About</a></li>
-</ol>
-
-<div class="links">
-<a href="#">Home</a>
-<a href="practice.html">Practice</a>
-<a href="https://www.figma.com/design/d6KAQFNDYZh6dosRc2VVH9/Untitled?node-id=0-1&p=f&t=CxCk2sBxo53Lli0s-0" target="_blank">Figma</a>
-<a href="https://www.behance.net/?tracking_source=nav20" target="_blank">Behance</a>
-<a href="#">About</a>
-</div>
-</nav>
-
-<div class="banner">
-<img src="image/profileselfpng.png" class="pic">
-</div>
-
-<div id="main">
-<p>My name is Sunoy Hazra I'm a passionate UI/UX Designer who loves transforming ideas into visually appealing and user-friendly designs. 
-</p>
-<p>
-My journey in the design world is fueled by curiosity and a constant desire to learn and grow.
-</p>
-<p>
-I'm always ready to dive into new projects and explore innovative ways to solve problems.
-</p>
-<p>
-When I'm not designing, you can find me exploring the latest design trends, experimenting with new design tools, or enjoying a good laugh over some quirky humor. Let's create something amazing together!
-</p>
-</div>
-
-
-
-
-<footer>
-<div class="box">
-<p style="color:teal;">
-RESOURCES 
-</p>
-<p style="color:black;">
-Overview
-</p>
-<p style="color:black;">
-Premium plans
-<p/>
-<p style="color:black;">
-Affiliate Plans
-</p>
-<p style="color:black;">
-Promotions
-</p>
-</div>
-
-<div class="box">
-<p style="color:teal;">
-RESOURCES 
-</p>
-<p style="color:black;">
-Overview
-</p>
-<p style="color:black;">
-Premium plans
-<p/>
-<p style="color:black;">
-Affiliate Plans
-</p>
-<p style="color:black;">
-Promotions
-</p>
-</div>
-<div class="box">
-<p style="color:teal;">
-RESOURCES 
-</p>
-<p style="color:black;">
-Overview
-</p>
-<p style="color:black;">
-Premium plans
-<p/>
-<p style="color:black;">
-Affiliate Plans
-</p>
-<p style="color:black;">
-Promotions
-</p>
-</div>
-<div class="box">
-<p style="color:teal;">
-RESOURCES 
-</p>
-<p1 style="color:black;">
-Overview
-</p>
-<p style="color:black;">
-Premium plans
-<p/>
-<p style="color:black;">
-Affiliate Plans
-</p>
-<p style="color:black;">
-Promotions
-</p>
-</div>
-
-</footer>
-
-<div class="box">
-</div>
-
-
-
-
-
+        // Generate QR code
+        var qrcode = new QRCode(document.getElementById("qrcode"), {
+            text: whatsappLink,
+            width: 200,
+            height: 200
+        });
+    </script>
 </body>
 </html>
